@@ -1,3 +1,10 @@
+2006-03-30  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* projects.h, cs2cs.c, pj_strerrno.c, p_series.c, gen_cheb.c: Added
+	_CRT_SECURE_NO_DEPRECATE declaration for VC8+, and ensure projects.h
+	gets included first where needed.  Avoids loud warnings on VC8.
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=1145
+
 2006-03-29  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* pj_krovak.c: Removed MessageBox() DEBUG stuff.
